--- a/todo.txt
+++ b/todo.txt
@@ -50,8 +50,10 @@
 	//*改成prompt了，原生不好解决。4.3 支持TextArea输入包括中文在内的需IME输入的文本。（参考：https://github.com/zhobo63/imgui-ts）
 5. 编辑器Demo：使用CycleGUI，做一个类似于Unity场景编辑器的DEMO。
 6. //DONE: 多workspace支持，可把workspace输出为image，并显示于cyclegui的panel中。
-
+ 
 TODOs:
+
+primitives: MSAA抗锯齿！
 //done. Button增加快捷键！
 局部快捷键（alt+xxx）
 //done. shortcut: 可以设置全局快捷键来触发行为。
