--- a/todo.txt
+++ b/todo.txt
@@ -95,4 +95,8 @@ morph: 支持面部表情
 
 Table: 排序。 显示超级多行。
 支持巨型图片显示，如卫星地图
-支持类似于vertexshaderart的自定义顶点渲染
+支持类似于vertexshaderart的自定义顶点渲染:
+
+shader: pbr
+ 1> pbr的反射，直接使用上一帧的skymap作为envmap。
+ 2> clearcoat
